# prouste

./: .travis.yml  Cargo.toml  README.md
examples/: extract_from_url.rs  lemonde_fr.rs
src/: article.rs  charset.rs  configuration.rs  crawler.rs  embedding.rs  extractor.rs  html.rs  lib.rs
src/crawler/: Cargo.toml
src/crawler/src/: lib.rs
src/extraction/: content.rs  mod.rs  predicate.rs  stopwords.rs  text.rs
src/extractor/: content.rs  embed.rs  mod.rs  predicate.rs  stopwords.rs  text.rs  title.rs
src/extractor/sites/: closermag.fr.html  figaro.fr.html  lemonde.fr.html  telegraph.co.uk.html
