[package]
name = "prouste"
version = "0.1.0"
authors = ["Sébastien Gruchet <sebastien.gruchet@digimind.com>"]
include = ["src/**/*", "test/**/*", "Cargo.toml"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
encoding = "0.2"
unicode-segmentation = "1.6.0"
stopwords = "0.1.0"
