[package]
name = "prouste"
version = "0.1.0"
authors = ["Sébastien Gruchet <sebastien.gruchet@digimind.com>"]
include = ["src/**/*", "test/**/*", "Cargo.toml"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
select = "0.4.3"
encoding = "0.2"
chardet = "0.2"
unicode-segmentation = "1.6.0"
stopwords = "0.1.0"
serde_json = "1.0"
rustfix = "0.4.6"
lazy_static = "1.4.0"
regex = "1.3.1"

[dev-dependencies]
reqwest = "0.9.22"